--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,25 @@
 canvas {
   display: block;
 }
+
+body {
+  font-family: "Open Sans", serif;
+  font-optical-sizing: auto;
+}
+
+
+.btn-container {
+  padding: 1rem 0;
+}
+.btn-container button {
+  border: 1px solid #333;
+  padding: 0.5rem 1rem;
+  background: #fff;
+  cursor: pointer;
+  border-radius: .5rem;
+}
+
+button:disabled {
+  cursor: not-allowed;
+  opacity: .5;
+}
