--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,21 @@
 canvas {
   display: block;
 }
+#app {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
   font-family: "Open Sans", serif;
   font-optical-sizing: auto;
 }
-
 
 .btn-container {
   padding: 1rem 0;
@@ -16,10 +25,17 @@ body {
   padding: 0.5rem 1rem;
   background: #fff;
   cursor: pointer;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 button:disabled {
   cursor: not-allowed;
-  opacity: .5;
+  opacity: 0.5;
+}
+
+div[class$="-container"] {
+  padding: 1rem;
+  margin: 1rem 0;
+  border: 1px solid #333;
+  text-align: center;
 }
